added all html markup elements with BEM methodology classes

--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -167,14 +167,20 @@
                                     <span class="feedback__review">3.5</span>
                                     <div class="feedback__comments comments">
                                         <a href="" class="comments__link">
-                                            <img src="img/main/icons/message/icon.svg" alt="Icon">
+                                            <img
+                                                src="img/main/icons/message/icon.svg"
+                                                alt="Icon" />
                                             120 comment
                                         </a>
                                     </div>
                                 </div>
                                 <div class="right-about__size size">
-                                    <a href="#" class="size__select">Select Size</a>
-                                    <a href="#" class="size__guide">Size Guide</a>
+                                    <a href="#" class="size__select">
+                                        Select Size
+                                    </a>
+                                    <a href="#" class="size__guide">
+                                        Size Guide
+                                    </a>
                                     <ul class="size__list">
                                         <li class="size__item">XS</li>
                                         <li class="size__item">S</li>
@@ -184,18 +190,165 @@
                                     </ul>
                                 </div>
                                 <div class="right-about__color color">
-                                    <h4 class="color__title">Colours Available</h4>
+                                    <h4 class="color__title">
+                                        Colours Available
+                                    </h4>
                                     <ul class="color__list">
-                                        <li class="color__item color__item--first"></li>
-                                        <li class="color__item color__item--second"></li>
-                                        <li class="color__item color__item--third"></li>
-                                        <li class="color__item color__item--fourth"></li>
+                                        <li
+                                            class="color__item color__item--first"></li>
+                                        <li
+                                            class="color__item color__item--second"></li>
+                                        <li
+                                            class="color__item color__item--third"></li>
+                                        <li
+                                            class="color__item color__item--fourth"></li>
                                     </ul>
+                                </div>
+                                <div class="right-about__cart cart">
+                                    <button
+                                        type="submit"
+                                        class="cart__button button-violet button-center">
+                                        Add to cart
+                                    </button>
+                                    <div class="cart__price">$63.00</div>
+                                </div>
+                                <div class="right-about__advantages advantages">
+                                    <a href="#" class="advantages__link">
+                                        Secure payment
+                                        <img
+                                            src="img/main/icons/secure-payment.svg"
+                                            alt="Icon" />
+                                    </a>
+                                    <a href="#" class="advantages__link">
+                                        Size & Fit
+                                        <img
+                                            src="img/main/icons/size&fit.svg"
+                                            alt="Icon" />
+                                    </a>
+                                    <a href="#" class="advantages__link">
+                                        Free shipping
+                                        <img
+                                            src="img/main/icons/free-shipping.svg"
+                                            alt="Icon" />
+                                    </a>
+                                    <a href="#" class="advantages__link">
+                                        Free Shipping & Returns
+                                        <img
+                                            src="img/main/icons/free-shipping&returns.svg"
+                                            alt="Icon" />
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="about__description description"></div>
-                        <div class="about__similar similar"></div>
+                        <div class="about__description description">
+                            <div
+                                class="description__content content-description"></div>
+                            <h2 class="content-description__title">
+                                Product Description
+                            </h2>
+                            <div class="content-description__tab tab">
+                                <div class="tab__item">Description</div>
+                                <div class="tab__item">User comments</div>
+                                <div class="tab__item">Question & Answer</div>
+                            </div>
+                            <div class="content-description__text text">
+                                <p>100% Bio-washed Cotton – makes the fabric extra soft & silky. Flexible ribbed crew neck. Precisely stitched with no pilling & no fading. Provide  all-time comfort. Anytime, anywhere. Infinite range of matte-finish HD prints.</p>
+                            </div>
+                            <div class="content-description__table table">
+                                <div class="table__cell">
+                                    <p>Fabric</p>
+                                    <p>Bio-washed Cotton</p>
+                                </div>
+                                <div class="table__cell">
+                                    <p>Pattern</p>
+                                    <p>Printed</p>
+                                </div>
+                                <div class="table__cell">
+                                    <p>Fit</p>
+                                    <p>Regular-fit</p>
+                                </div>
+                                <div class="table__cell">
+                                    <p>Neck</p>
+                                    <p>Round Neck</p>
+                                </div>
+                                <div class="table__cell">
+                                    <p>Sleeve</p>
+                                    <p>Half-sleeves</p>
+                                </div>
+                                <div class="table__cell">
+                                    <p>Style</p>
+                                    <p>Casual Wear</p>
+                                </div>
+                            </div>
+                            <div class="description__video video-description">
+                                <div class="video-description__item">
+                                    <img src="img/main/about/video.jpg" alt="Video">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about__similar similar">
+                            <h2 class="similar__title">Similar Products</h2>
+                            <div class="similar__products products">
+                                <div class="products__item item-products">
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-1.jpg" alt="Image">
+                                        <h4 class="item-products__name">White T-Shirt</h4>
+                                        <div class="item-products__brand">Priya’s  Brand</div>
+                                        <div class="item-products__price price">$13.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-2.jpg" alt="Image">
+                                        <h4 class="item-products__name">Dark Green Sweatshirt....</h4>
+                                        <div class="item-products__brand">Roboto’s  Brand</div>
+                                        <div class="item-products__price price">$127.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-3.jpg" alt="Image">
+                                        <h4 class="item-products__name">Levender Sweatshirt ....</h4>
+                                        <div class="item-products__brand">Jhanvi’s  Brand</div>
+                                        <div class="item-products__price price">$133.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-4.jpg" alt="Image">
+                                        <h4 class="item-products__name">Urban jacket with white ....</h4>
+                                        <div class="item-products__brand">Sagar’s  Brand</div>
+                                        <div class="item-products__price price">$79.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-5.jpg" alt="Image">
+                                        <h4 class="item-products__name">Plain White T-Shirt</h4>
+                                        <div class="item-products__brand">Jhanvi’s  Brand</div>
+                                        <div class="item-products__price price">$123.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-6.jpg" alt="Image">
+                                        <h4 class="item-products__name">Checks Shirt with white.....</h4>
+                                        <div class="item-products__brand">H.M’s  Brand</div>
+                                        <div class="item-products__price price">$123.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-7.jpg" alt="Image">
+                                        <h4 class="item-products__name">One piece black top & ....</h4>
+                                        <div class="item-products__brand">Nike’s  Brand</div>
+                                        <div class="item-products__price price">$123.00</div>
+                                    </div>
+                                    <div class="item-products__info">
+                                        <span></span>
+                                        <img src="img/main/about/similar/item-8.jpg" alt="Image">
+                                        <h4 class="item-products__name">Denim Blue Shirt</h4>
+                                        <div class="item-products__brand">MOMO’s  Brand</div>
+                                        <div class="item-products__price price">$38.00</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
