optimized the photo

--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -79,8 +79,8 @@
             <main class="main">
                 <div class="main__container">
                     <div class="layout">
-                        <div class="product__about about">
-                            <div class="about__left left-about">
+                        <div class="layout__product about-product">
+                            <div class="about-product__left left-about">
                                 <div class="left-about__slider slider">
                                     <div class="slider__sidebar">
                                         <a class="slider__link" href="#">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="about__description description">
+                        <div class="layout__description description">
                             <div
                                 class="description__content content-description"></div>
                             <h2 class="content-description__title">
@@ -286,65 +286,65 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="about__similar similar">
+                        <div class="layout__similar similar">
                             <h2 class="similar__title">Similar Products</h2>
                             <div class="similar__products products">
-                                <div class="products__item item-products">
-                                    <div class="item-products__info">
+                                <div class="products__item item-product">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-1.jpg" alt="Image">
-                                        <h4 class="item-products__name">White T-Shirt</h4>
-                                        <div class="item-products__brand">Priya’s  Brand</div>
-                                        <div class="item-products__price price">$13.00</div>
+                                        <img src="img/main/about/similar/item-1.webp" alt="Image">
+                                        <h4 class="item-product__name">White T-Shirt</h4>
+                                        <div class="item-product__brand">Priya’s  Brand</div>
+                                        <div class="item-product__price price">$13.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-2.jpg" alt="Image">
-                                        <h4 class="item-products__name">Dark Green Sweatshirt....</h4>
-                                        <div class="item-products__brand">Roboto’s  Brand</div>
-                                        <div class="item-products__price price">$127.00</div>
+                                        <img src="img/main/about/similar/item-2.webp" alt="Image">
+                                        <h4 class="item-product__name">Dark Green Sweatshirt....</h4>
+                                        <div class="item-product__brand">Roboto’s  Brand</div>
+                                        <div class="item-product__price price">$127.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-3.jpg" alt="Image">
-                                        <h4 class="item-products__name">Levender Sweatshirt ....</h4>
-                                        <div class="item-products__brand">Jhanvi’s  Brand</div>
-                                        <div class="item-products__price price">$133.00</div>
+                                        <img src="img/main/about/similar/item-3.webp" alt="Image">
+                                        <h4 class="item-product__name">Levender Sweatshirt ....</h4>
+                                        <div class="item-product__brand">Jhanvi’s  Brand</div>
+                                        <div class="item-product__price price">$133.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-4.jpg" alt="Image">
-                                        <h4 class="item-products__name">Urban jacket with white ....</h4>
-                                        <div class="item-products__brand">Sagar’s  Brand</div>
-                                        <div class="item-products__price price">$79.00</div>
+                                        <img src="img/main/about/similar/item-4.webp" alt="Image">
+                                        <h4 class="item-product__name">Urban jacket with white ....</h4>
+                                        <div class="item-product__brand">Sagar’s  Brand</div>
+                                        <div class="item-product__price price">$79.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-5.jpg" alt="Image">
-                                        <h4 class="item-products__name">Plain White T-Shirt</h4>
-                                        <div class="item-products__brand">Jhanvi’s  Brand</div>
-                                        <div class="item-products__price price">$123.00</div>
+                                        <img src="img/main/about/similar/item-5.webp" alt="Image">
+                                        <h4 class="item-product__name">Plain White T-Shirt</h4>
+                                        <div class="item-product__brand">Jhanvi’s  Brand</div>
+                                        <div class="item-product__price price">$123.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-6.jpg" alt="Image">
-                                        <h4 class="item-products__name">Checks Shirt with white.....</h4>
-                                        <div class="item-products__brand">H.M’s  Brand</div>
-                                        <div class="item-products__price price">$123.00</div>
+                                        <img src="img/main/about/similar/item-6.webp" alt="Image">
+                                        <h4 class="item-product__name">Checks Shirt with white.....</h4>
+                                        <div class="item-product__brand">H.M’s  Brand</div>
+                                        <div class="item-product__price price">$123.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-7.jpg" alt="Image">
-                                        <h4 class="item-products__name">One piece black top & ....</h4>
-                                        <div class="item-products__brand">Nike’s  Brand</div>
-                                        <div class="item-products__price price">$123.00</div>
+                                        <img src="img/main/about/similar/item-7.webp" alt="Image">
+                                        <h4 class="item-product__name">One piece black top & ....</h4>
+                                        <div class="item-product__brand">Nike’s  Brand</div>
+                                        <div class="item-product__price price">$123.00</div>
                                     </div>
-                                    <div class="item-products__info">
+                                    <div class="item-product__info">
                                         <span></span>
-                                        <img src="img/main/about/similar/item-8.jpg" alt="Image">
-                                        <h4 class="item-products__name">Denim Blue Shirt</h4>
-                                        <div class="item-products__brand">MOMO’s  Brand</div>
-                                        <div class="item-products__price price">$38.00</div>
+                                        <img src="img/main/about/similar/item-8.webp" alt="Image">
+                                        <h4 class="item-product__name">Denim Blue Shirt</h4>
+                                        <div class="item-product__brand">MOMO’s  Brand</div>
+                                        <div class="item-product__price price">$38.00</div>
                                     </div>
                                 </div>
                             </div>
